execute python file

--- a/python_for_scientists_exercise_5.ipynb
+++ b/python_for_scientists_exercise_5.ipynb
@@ -82,11 +82,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-12-20T18:21:47.363616Z",
-     "start_time": "2021-12-20T18:21:47.359667Z"
+     "end_time": "2021-12-20T19:00:00.120566Z",
+     "start_time": "2021-12-20T19:00:00.113621Z"
     }
    },
    "outputs": [],
@@ -99,11 +99,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-12-20T18:21:48.065206Z",
-     "start_time": "2021-12-20T18:21:48.060218Z"
+     "end_time": "2021-12-20T19:00:00.628446Z",
+     "start_time": "2021-12-20T19:00:00.621421Z"
     }
    },
    "outputs": [],
@@ -113,11 +113,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-12-20T18:21:48.766597Z",
-     "start_time": "2021-12-20T18:21:48.760655Z"
+     "end_time": "2021-12-20T19:00:01.232818Z",
+     "start_time": "2021-12-20T19:00:01.219851Z"
     }
    },
    "outputs": [],
@@ -156,6 +156,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-12-20T19:02:50.092826Z",
+     "start_time": "2021-12-20T19:02:50.012259Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.system(\"python \" + 'file_creation_tryout/python_script.py')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-12-20T19:02:18.563471Z",
+     "start_time": "2021-12-20T19:02:18.558447Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import subprocess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-12-20T19:03:59.774547Z",
+     "start_time": "2021-12-20T19:03:59.706870Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subprocess.call(\"python file_creation_tryout/python_script.py\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -168,6 +232,13 @@
    "source": [
     "### Create a generator function that yields a counter that counts how often the generator function has been called"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
